--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <div id = "app">Hello</app>
-
+    <div id = "app">Hello</div>
+      <script src = "./src/note-controller.js"></script>
   </body>
 </html>
