--- a/TestRunner.html
+++ b/TestRunner.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
+    <div id = "app"></div>
     <script src = "./src/note-model.js"></script>
     <script src = "./tests/assert.js"></script>
     <script src = "./tests/note-tests.js"></script>
@@ -12,6 +13,8 @@
     <script src = "./tests/note-list-tests.js"></script>
     <script src = "./src/note-list-view-model.js"></script>
     <script src = "./tests/note-list-view-tests.js"></script>
+    <script src = "./src/note-controller.js"></script>
+    <script src = "./tests/note-controller-tests.js"></script>
 
 
   </body>
