--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   </head>
   <body>
     <div id = "app">Hello</div>
-      <script src = "./src/note-controller.js"></script>
+    <script src = "./src/note-model.js"></script>
+    <script src = "./src/note-list-model.js"></script>
+    <script src = "./src/note-list-view-model.js"></script>
+    <script src = "./src/note-controller.js"></script>
+    <script>
+      var list = new NoteList()
+      var controller = new NoteController(list, NoteListView, Note)
+      controller.updateWindow();
+    </script>
   </body>
 </html>
