--- a/TestRunner.html
+++ b/TestRunner.html
@@ -15,7 +15,7 @@
     <script src = "./tests/note-list-view-tests.js"></script>
     <script src = "./src/note-controller.js"></script>
     <script src = "./tests/note-controller-tests.js"></script>
-
-
+    <script src ="./src/single-note-view.js"></script>
+    <script src ="./tests/single-note-view-tests.js"></script>
   </body>
 </html>
